nav z-index changed - fix m-cart overlap

--- a/src/styles/sparx/_[ash].scss
+++ b/src/styles/sparx/_[ash].scss
@@ -99,6 +99,7 @@ li{list-style: none;}
   .nav-is-fixed nav.mb-dt-nav-cont {
       top: 98px;
       box-shadow: 0px 4px 6px -5px #d8d8d8;
+      z-index: 12;
   }
   
   .nav-is-fixed .mb-logo-2{
